Update Backend Containers Refactor docker-compose.yml & Dockerfile Refactor mvn pom.xml Refactor App.java & Controller.java Add application.properties for Spring Boot build Refactor sc_server .gitignore

--- a/Implementation/sc_server/Dockerfile
+++ b/Implementation/sc_server/Dockerfile
@@ -7,5 +7,9 @@ WORKDIR /sc_server
 # Copia il file JAR compilato nel container
 COPY target/sc_server.jar sc_server.jar
 
+# Espone la porta HTTPS
+EXPOSE 8443
+
 # Comando per eseguire il server Spring Boot
 ENTRYPOINT ["java", "-jar", "sc_server.jar"]
+
