--- a/Implementation/sc_frontend/client-web-app/package.json
+++ b/Implementation/sc_frontend/client-web-app/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
