--- a/Implementation/sc_frontend/client-web-app/package.json
+++ b/Implementation/sc_frontend/client-web-app/package.json
@@ -6,12 +6,17 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
+    "@mui/x-charts": "^7.23.1",
+    "@mui/x-data-grid": "^7.23.1",
+    "@mui/x-date-pickers": "^7.23.1",
+    "@mui/x-tree-view": "^7.23.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.10.0",
+    "dayjs": "^1.11.13",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
