--- a/Implementation/sc_frontend/client-web-app/package.json
+++ b/Implementation/sc_frontend/client-web-app/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
