--- a/Implementation/sc_frontend/client-web-app/package.json
+++ b/Implementation/sc_frontend/client-web-app/package.json
@@ -12,6 +12,8 @@
     "@mui/x-data-grid": "^7.23.1",
     "@mui/x-date-pickers": "^7.23.1",
     "@mui/x-tree-view": "^7.23.0",
+    "@tanstack/query-sync-storage-persister": "^5.62.3",
+    "@tanstack/react-query-persist-client": "^5.62.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
