--- a/Implementation/sc_server/src/main/resources/application.properties
+++ b/Implementation/sc_server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8443
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
