--- a/Implementation/sc_server/docker-compose.yml
+++ b/Implementation/sc_server/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    volumes:
+      - platform_db_data:/var/lib/mysql
     networks:
       - traefik-network
 
