--- a/Implementation/sc_server/src/main/resources/application.properties
+++ b/Implementation/sc_server/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 server.port=8443
+
+#TODO: why they dont work with environment variables?
 spring.datasource.url=jdbc:mariadb://localhost:3306/sc_DB
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+#Create tables if not exist
+spring.jpa.hibernate.ddl-auto=update
+#Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
-
-
+#set dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
