--- a/Implementation/sc_server/src/main/resources/application.properties
+++ b/Implementation/sc_server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/sc_DB
 spring.datasource.username=root
 spring.datasource.password=password
 #Create tables if not exist
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 #Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
