--- a/Implementation/sc_server/src/main/resources/application.properties
+++ b/Implementation/sc_server/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8443
 spring.datasource.url=jdbc:mariadb://localhost:3306/sc_DB
 spring.datasource.username=root
 spring.datasource.password=password
-#Create tables if not exist
+#update = Create tables if not exist
+#validate = check if tables exists, if not throw error
 spring.jpa.hibernate.ddl-auto=update
 #Show SQL
 spring.jpa.show-sql=true
