--- a/Implementation/sc_server/src/main/resources/application.properties
+++ b/Implementation/sc_server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 #update = Create tables if not exist
 #validate = check if tables exists, if not throw error
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 #Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
