--- a/Implementation/sc_server/src/main/resources/application.properties
+++ b/Implementation/sc_server/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-server.port=8443
-
-#TODO: why they dont work with environment variables?
-spring.datasource.url=jdbc:mariadb://localhost:3306/sc_DB
-spring.datasource.username=root
-spring.datasource.password=password
-#update = Create tables if not exist
-#validate = check if tables exists, if not throw error
-spring.jpa.hibernate.ddl-auto=update
-#Show SQL
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-#set dialect
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.profiles.active=dev
