--- a/Implementation/sc_frontend/client-web-app/package.json
+++ b/Implementation/sc_frontend/client-web-app/package.json
@@ -22,6 +22,7 @@
     "@tanstack/query-sync-storage-persister": "^5.62.3",
     "@tanstack/react-query-persist-client": "^5.62.3",
     "dayjs": "^1.11.13",
+    "firebase": "^11.2.0",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
