--- a/Implementation/sc_auth/pom.xml
+++ b/Implementation/sc_auth/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>sc_auth</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>sc_server</name>
+    <name>sc_auth</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -33,11 +33,11 @@
             <version>3.3.5</version>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.3.5</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -46,9 +46,27 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
             <version>8.1.0</version> <!-- Check for latest version -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
         </dependency>
 
     </dependencies>
