--- a/Implementation/sc_frontend/client-web-app/package.json
+++ b/Implementation/sc_frontend/client-web-app/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:stub": "vite --mode use-stubs",
+    "dev:api": "vite --mode use-api",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -21,7 +23,10 @@
     "@mui/x-tree-view": "^7.23.0",
     "@tanstack/query-sync-storage-persister": "^5.62.3",
     "@tanstack/react-query-persist-client": "^5.62.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
@@ -39,7 +44,13 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "msw": "^2.7.0",
     "vite": "^6.0.1",
     "vite-plugin-pwa": "^0.21.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
