--- a/Implementation/sc_server/src/main/resources/application-dev.properties
+++ b/Implementation/sc_server/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.password=password
 #validate = check if tables exists, if not throw error
 spring.jpa.hibernate.ddl-auto=update
 #Show SQL
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 #set dialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
