add firebase notification implementation (to be tested)

--- a/Implementation/sc_server/.gitignore
+++ b/Implementation/sc_server/.gitignore
@@ -20,3 +20,4 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 indexDirectory/
+src/main/resources/firebaseKey.json
