--- a/Implementation/sc_server/pom.xml
+++ b/Implementation/sc_server/pom.xml
@@ -20,6 +20,7 @@
   </properties>
 
   <dependencies>
+    <!-- junit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -33,25 +34,25 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <version>3.3.5</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <version>3.3.5</version>
     </dependency>
-
+    <!-- MariaDB driver -->
     <dependency>
       <groupId>org.mariadb.jdbc</groupId>
       <artifactId>mariadb-java-client</artifactId>
       <version>3.2.0</version>
     </dependency>
-
+    <!-- Swagger -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>2.2.0</version>
     </dependency>
-
+    <!-- Lucene (for the Recommendation System) -->
+    <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-core -->
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
@@ -69,7 +70,12 @@
       <artifactId>lucene-queryparser</artifactId>
       <version>10.1.0</version>
     </dependency>
-
+    <!-- Firebase (for the Notification System) -->
+    <dependency>
+      <groupId>com.google.firebase</groupId>
+      <artifactId>firebase-admin</artifactId>
+      <version>9.4.3</version>
+    </dependency>
   </dependencies>
 
   <build>
