--- a/Implementation/sc_server/src/main/resources/application-prod.properties
+++ b/Implementation/sc_server/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #update = Create tables if not exist
 #validate = check if tables exists, if not throw error
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 #Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
