--- a/Implementation/sc_server/src/main/resources/application-dev.properties
+++ b/Implementation/sc_server/src/main/resources/application-dev.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 #set dialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+app.firebase-configuration-file=firebaseKey.json
