--- a/Implementation/sc_server/src/main/resources/application-prod.properties
+++ b/Implementation/sc_server/src/main/resources/application-prod.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.format_sql=true
 #set dialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+app.firebase-configuration-file=firebaseKey.json
