Update .gitignore to include application.properties

--- a/Implementation/sc_server/.gitignore
+++ b/Implementation/sc_server/.gitignore
@@ -21,3 +21,4 @@ buildNumber.properties
 .classpath
 indexDirectory/
 src/main/resources/firebaseKey.json
+src/main/resources/application.properties
