add zero-tier network to docker-compose configuration

--- a/Implementation/docker-compose.yml
+++ b/Implementation/docker-compose.yml
@@ -144,10 +144,13 @@ services:
 
     networks:
       - traefik-network
+      - zero-tier
 
 networks:
   traefik-network:
     driver: bridge
+  zero-tier:
+    external: true
 
 volumes:
   platform_db_data:
