change network config

--- a/Implementation/sc_server/src/main/resources/application-dev.properties
+++ b/Implementation/sc_server/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
-server.port=8443
+server.address=10.147.19.167
+server.port=8445
 
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/sc_DB
 spring.datasource.username=root
