--- a/Implementation/docker-compose.yml
+++ b/Implementation/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     entrypoint: ["java", "-jar", "/sc_server/sc_server.jar"]
     volumes:
       - ./sc_server/target/sc_server.jar:/sc_server/sc_server.jar
+    ports:
+      - "8443:8443"
     environment:
       SPRING_DATASOURCE_URL: jdbc:mariadb://application-database-service:3306/sc_DB
       SPRING_DATASOURCE_USERNAME: root
@@ -16,13 +18,14 @@ services:
 
       #____________ROUTERS____________#
       # APPLICATION SERVICE
-      - "traefik.http.routers.application-container.rule=Host(`localhost`) &&  PathPrefix(`/application-api`)"
+      - "traefik.http.routers.application-container.rule=Host(`10.147.19.167`) &&  PathPrefix(`/application-api`)"
       - "traefik.http.routers.application-container.service=application-service"
       - "traefik.http.routers.application-container.entrypoints=web"
       - "traefik.http.routers.application-container.middlewares=cors-headers"
 
     networks:
       - traefik-network
+      - zerotier_network
     depends_on:
       - application-database-service
       - notification-database-service
@@ -33,6 +36,8 @@ services:
     container_name: sc_auth-container
     working_dir: /sc_auth
     entrypoint: ["java", "-jar", "/sc_auth/sc_auth.jar"]
+    ports:
+      - "8444:8444"
     volumes:
       - ./sc_auth/target/sc_auth.jar:/sc_auth/sc_auth.jar
     labels:
@@ -41,13 +46,14 @@ services:
 
       #____________ROUTERS____________#
       # AUTH SERVICE
-      - "traefik.http.routers.auth-container.rule=Host(`localhost`) &&  PathPrefix(`/auth-api`)"
+      - "traefik.http.routers.auth-container.rule=Host(`10.147.19.167`) &&  PathPrefix(`/auth-api`)"
       - "traefik.http.routers.auth-container.service=auth-service"
       - "traefik.http.routers.auth-container.entrypoints=web"
       - "traefik.http.routers.auth-container.middlewares=cors-headers"
 
     networks:
       - traefik-network
+      - zerotier_network
     restart: always
 
   application-database-service:
@@ -108,16 +114,16 @@ services:
     image: traefik:latest
     container_name: traefik-container
     ports:
-      - "80:80"
-      - "443:443"
+      - "8445:8445"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro" # Accesso al socket Docker
       - "./proxy/traefik.yaml:/etc/traefik/traefik.yaml"
     labels:
+      - "traefik.http.services.traefik.loadbalancer.server.port=8445"
       - "traefik.enable=true"
       #____________ROUTERS____________#
       # DASHBOARD ROUTER ---> to traefik
-      - "traefik.http.routers.traefik.rule=Host(`localhost`)"
+      - "traefik.http.routers.traefik.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.traefik.entrypoints=web"
       - "traefik.http.routers.traefik.service=api@internal"
       # PRIVATE CALLS ROUTER ---> to sc-auth-container
@@ -137,17 +143,22 @@ services:
       - "traefik.http.middlewares.auth-check.forwardauth.address=http://sc-auth-service:8444/auth-api/validate"
       - "traefik.http.middlewares.auth-check.forwardauth.trustForwardHeader=true"
       # MIDDLEWARE CORS HEADERS (for internal calls)
-      - "traefik.http.middlewares.cors-headers.headers.accessControlAllowOriginList=http://localhost:5173"
+      - "traefik.http.middlewares.cors-headers.headers.accessControlAllowOriginList=*"
       - "traefik.http.middlewares.cors-headers.headers.accessControlAllowMethods=GET,POST,PUT,DELETE,OPTIONS"
       - "traefik.http.middlewares.cors-headers.headers.accessControlAllowHeaders=*"
       - "traefik.http.middlewares.cors-headers.headers.accessControlAllowCredentials=true"
 
+
     networks:
       - traefik-network
+      - zerotier_network
 
 networks:
   traefik-network:
     driver: bridge
+  zerotier_network:
+    external: true
+    name: zerotier_network
 
 volumes:
   platform_db_data:
