--- a/Implementation/proxy/traefik.yaml
+++ b/Implementation/proxy/traefik.yaml
@@ -2,12 +2,7 @@ api:
   dashboard: true
 entryPoints:
   web:
-    address: ":8445"
-    # http:
-    #   redirections:
-    #     entryPoint:
-    #       to: "websecure"
-    #       scheme: "https"
+    address: ":80"
   websecure:
     address: ":443"
 
@@ -16,12 +11,4 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
 log:
-  level: INFO
-# certificatesResolvers:
-# le:
-#   acme:
-#     email: "slaitroc@gmail.com"
-#     storage: "/etc/traefik/acme.json"
-#     tlsChallenge: {}
-#     httpChallenge:
-#       entryPoint: "web"
+  level: DEBUG
