--- a/Implementation/sc_server/pom.xml
+++ b/Implementation/sc_server/pom.xml
@@ -96,6 +96,12 @@
       <artifactId>firebase-admin</artifactId>
       <version>9.4.3</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
